# personal-finance

./: .env.example  .gitignore  PLAN.md  README.md  cron.example  pyproject.toml
.claude/: settings.local.json
docs/: BALANCE_INGESTION.md  EXCHANGE_API_SETUP.md  GOOGLE_SHEETS_SETUP.md
scripts/: add_symbol_mappings.py  add_wallet_addresses.py  bootstrap_accounts.py  bootstrap_blockchain_mappings.py  bootstrap_currencies.py  bootstrap_rpc_endpoints.py  bootstrap_symbol_mappings.py  check_token_metadata.py  deploy.sh  discover_tokens.py  example_setup.py  export_to_sheets.py  ingest_balances.py  ingest_crypto_balances.py  ingest_fiat_balances.py  ingest_fx_rates.py  ingest_onchain_balances.py  init_db.py  snapshot_net_worth.py
sql/: schema.sql
sql/migrations/: 001_add_blockchain_support.sql  002_add_wallet_addresses.sql  003_create_net_worth_history_table.sql
src/portfolio/: __init__.py  blockchain.py  exchanges.py  tradingview.py
